# GD32F4xx

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  LICENSE  README.md  gd32f4xx_flash.ld
Firmware/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
Firmware/GD32F4xx_lds/: gd32f450z_flash.ld
Firmware/GD32F4xx_standard_peripheral/Source/: gd32f4xx_gpio.c
Gui/demo/: lv_example_get_started_1.c  lv_example_get_started_2.c  lv_example_get_started_3.c
Gui/examples/: lv_demo.h  lv_demo_conf.h
Gui/examples/lv_demo_benchmark/: lv_demo_benchmark.c
Gui/examples/lv_demo_music/: lv_demo_music.h
Gui/examples/lv_demo_stress/: lv_demo_stress.c
Gui/examples/lv_demo_widgets/: lv_demo_widgets.c
Hardware/Include/: Boot_Game_Usart.h  game_usart.h  image1.h  image2lcd.h  lcd.h  lcd_gui.h  lcdfont.h  led.h  led_key.h  led_light_flow.h  lvgl_tftlcd.h  pic.h  pwm.h  pwm_led.h  spi.h  st7789_lcd.h  tftlcd.h  tftlcd_init.h  timer.h  timer_led.h  usart.h
Hardware/Led/: gd32f4xx_led.c  gd32f4xx_led.h
Hardware/Source/: Boot_Game_Usart.c  game_usart.c  image2lcd.c  lcd.c  lcd_gui.c  led.c  led_key.c  led_light_flow.c  lvgl_tftlcd.h.c  pwm.c  pwm_led.c  spi.c  st7789_lcd.c  tftlcd.c  tftlcd_init.c  timer.c  timer_led.c  usart.c
Lib/LVGL/: lv_conf.h  lvgl.h
Lib/LVGL/lv_core/Include/: lv_disp.h  lv_group.h  lv_indev.h  lv_obj.h  lv_obj_draw.h  lv_obj_pos.h  lv_obj_scroll.h  lv_obj_style.h
Lib/LVGL/lv_core/Source/: lv_group.c  lv_indev.c  lv_obj.c  lv_obj_pos.c  lv_obj_style.c  lv_obj_tree.c  lv_refr.c  lv_theme.c
Lib/LVGL/lv_draw/Include/: lv_draw.h  lv_draw_label.h  lv_draw_mask.h
Lib/LVGL/lv_draw/Source/: lv_draw_arc.c  lv_draw_blend.c  lv_draw_img.c  lv_draw_label.c  lv_draw_mask.c  lv_draw_rect.c  lv_img_decoder.c
Lib/LVGL/lv_extra/Include/: lv_animimg.h  lv_calendar_header_arrow.h  lv_calendar_header_dropdown.h  lv_chart.h  lv_flex.h  lv_grid.h  lv_meter.h  lv_span.h  lv_spinbox.h  lv_tabview.h  lv_theme_mono.h  lv_tileview.h  lv_widgets.h  lv_win.h
Lib/LVGL/lv_extra/Source/: lv_animimg.c  lv_calendar.c  lv_calendar_header_arrow.c  lv_calendar_header_dropdown.c  lv_flex.c  lv_grid.c  lv_keyboard.c  lv_list.c  lv_theme_default.c  lv_theme_mono.c  lv_win.c
Lib/LVGL/lv_font/Include/: lv_font.h  lv_font_loader.h
Lib/LVGL/lv_font/Source/: lv_font_dejavu_16_persian_hebrew.c  lv_font_loader.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  lv_font_simsun_16_cjk.c  lv_font_unscii_16.c  lv_font_unscii_8.c
Lib/LVGL/lv_hal/Include/: lv_hal_disp.h  lv_hal_indev.h
Lib/LVGL/lv_hal/Source/: lv_hal_disp.c  lv_hal_indev.c
Lib/LVGL/lv_misc/Include/: lv_anim.h  lv_area.h  lv_bidi.h  lv_color.h  lv_fs.h  lv_gc.h  lv_mem.h  lv_style.h  lv_timer.h  lv_tlsf.h  lv_txt.h
Lib/LVGL/lv_misc/Source/: lv_anim.c  lv_area.c  lv_bidi.c  lv_log.c  lv_style.c  lv_timer.c  lv_tlsf.c  lv_txt_ap.c
Lib/LVGL/lv_widgets/Include/: lv_bar.h  lv_btnmatrix.h  lv_canvas.h  lv_dropdown.h  lv_label.h  lv_objx_templ.h  lv_switch.h  lv_textarea.h
Lib/LVGL/lv_widgets/Source/: lv_arc.c  lv_bar.c  lv_btn.c  lv_btnmatrix.c  lv_canvas.c  lv_checkbox.c  lv_dropdown.c  lv_img.c  lv_label.c  lv_line.c  lv_roller.c  lv_slider.c  lv_switch.c  lv_table.c  lv_textarea.c
Lib/LVGL/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c  lv_port_indev.h
Lib/LVGL/src/extra/themes/basic/: lv_theme_basic.c
Lib/LVGL/src/gpu/: lv_gpu_gd32_ipa.c  lv_gpu_gd32_ipa.h
User/: gd32f4xx_it.c  lv_conf.h  main.c  main.h  systick.c  systick.h
